kubernetes/projects/system/apps/rancher-monitoring/namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cattle-monitoring-system
  labels:
    app.kubernetes.io/name: rancher-monitoring
    app.kubernetes.io/part-of: rancher-monitoring
    field.cattle.io/projectId: p-zl69x
    home-lab.io/project-slug: system
  annotations:
    field.cattle.io/projectId: local:p-zl69x
---
apiVersion: v1
kind: Namespace
metadata:
  name: cattle-dashboards
  labels:
    app.kubernetes.io/name: rancher-monitoring
    app.kubernetes.io/part-of: rancher-monitoring
    field.cattle.io/projectId: p-zl69x
    home-lab.io/project-slug: system
  annotations:
    field.cattle.io/projectId: local:p-zl69x
