kubernetes/projects/system/apps/rancher-monitoring/alertmanager-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher-monitoring-alertmanager
  namespace: cattle-monitoring-system
  labels:
    app.kubernetes.io/name: alertmanager
    app.kubernetes.io/component: alerting
    app.kubernetes.io/part-of: rancher-monitoring
    home-lab.io/project-slug: system
spec:
  ingressClassName: traefik
  rules:
    - host: alertmanager.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rancher-monitoring-alertmanager
                port:
                  name: http-web
