kubernetes/projects/system/apps/rancher-monitoring/prometheus-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher-monitoring-prometheus
  namespace: cattle-monitoring-system
  labels:
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/component: metrics
    app.kubernetes.io/part-of: rancher-monitoring
    home-lab.io/project-slug: system
spec:
  ingressClassName: traefik
  rules:
    - host: prometheus.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: thanos-query
                port:
                  name: http
