kubernetes/projects/system/apps/rancher-monitoring/longhorn-networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-longhorn-metrics
  namespace: longhorn-system
  labels:
    app.kubernetes.io/part-of: rancher-monitoring
spec:
  podSelector:
    matchLabels:
      app: longhorn-manager
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cattle-monitoring-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
              prometheus: rancher-monitoring-prometheus
      ports:
        - protocol: TCP
          port: 9500
